<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <LinearLayout
        android:id="@+id/game_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/marker_selection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/x_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/play_as_x"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/o_marker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/play_as_o"
                android:textColor="@color/blue"
                android:textStyle="bold" />
        </RadioGroup>

        <Button
            android:id="@+id/new_game_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@drawable/button_shape"
            android:text="@string/new_game_button" />
    </LinearLayout>

    <GridView
        android:id="@+id/game_board"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_settings"
        android:background="@android:color/black"
        android:horizontalSpacing="10dp"
        android:numColumns="3"
        android:orientation="horizontal"
        android:padding="10dp"
        android:verticalSpacing="10dp" />

    <LinearLayout
        android:id="@+id/game_stats"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/game_board"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:id="@+id/win_rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_win_rate_label"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tie_rate_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/win_rate_label"
                android:text="@string/tie_rate_label"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tie_rate_label"
                android:text="@string/user_lose_rate_label"
                android:textColor="@color/blue"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@+id/win_rate_label">

                <TextView
                    android:id="@+id/win_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_rate"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/tie_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/win_rate"
                    android:text="@string/default_rate"
                    android:textColor="@color/red" />

                <TextView
                    android:id="@+id/lose_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tie_rate"
                    android:text="@string/default_rate"
                    android:textColor="@color/red" />

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:id="@+id/game_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="1"
            android:singleLine="false"
            android:textColor="@color/blue"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>
